# youtube-manager-ai

./: .gitignore  README.md  STATUS.md  docker-compose.yml
.github/workflows/: migrations.yml
backend/: .env.example  .env.local.example  .vercelignore  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json  vercel_app.py
backend/alembic/: env.py
backend/alembic/versions/: b80597d81f11_add_deleted_at_to_playlists.py  ef08f4e09821_initial_migration_with_all_models.py
backend/api/: index.py
backend/app/: config.py  database.py  dependencies.py  logger.py  main.py  redis_client.py  redis_rest_client.py
backend/app/models/: __init__.py  category.py  playlist.py  tag.py  user.py  video.py
backend/app/routers/: __init__.py  auth.py  categories.py  playlists.py  progress.py  tags.py  videos.py  worker.py
backend/app/schemas/: __init__.py  auth.py  category.py  playlist.py  tag.py  user.py  video.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  progress_service.py  youtube_service.py
backend/app/utils/: qstash_client.py
backend/scripts/: migrate.sh
frontend/: .env.local.example  biome.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/api/: api.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: CategorizationProgress.tsx  CategorizationProgressSSE.tsx  CreatePlaylistDialog.tsx  FilterPanel.tsx  Navbar.tsx  ThemeToggle.tsx  VideoCard.tsx
frontend/hooks/: useSSE.ts
frontend/store/: auth.ts
frontend/types/: index.ts
(+7 files in other folders)
