[tool.poetry]
name = "youtube-manager-backend"
version = "0.1.0"
description = ""
authors = ["Karthik-Ananthnarayan <karthikga124@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
psycopg2-binary = "^2.9.11"
redis = "^7.0.0"
python-jose = "^3.5.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
openai = "^2.6.0"
pydantic-settings = "^2.11.0"
google-auth = "^2.41.1"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.185.0"
cryptography = "^46.0.3"
bcrypt = "^5.0.0"
email-validator = "^2.3.0"
isodate = "^0.7.2"
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
ruff = "^0.14.1"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
